# ie-MCP-servers

./: .cursorrules  .gitignore  .mcp.json  .openproject.conf  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  HANDOFF.md  README.md  TASKS.md  setup.bat
.claude/skills/expose-data-entity/: SKILL.md
.githooks/: post-commit
.github/: copilot-instructions.md
data-mcp-servers/mssql/: Dockerfile  dab-config.empaque.json  dab-config.json  dab-config.monitor.json  grants-intranet.sql  grants-monitor.sql  grants.sql
data-mcp-servers/mssql-explorer/: Dockerfile  pyproject.toml  server-meta.json  server.py
data-mcp-servers/mssql-intranet/: dab-config.json  gen-config.py
data-mcp-servers/mssql-monitor/: Dockerfile  dab-config.json
data-mcp-servers/mysql-glpi/: dab-config.json  gen-config.py  grants.sql
data-mcp-servers/postgres-openproject/: dab-config.json
deploy/: .env.example  docker-compose.yml
deploy/nginx/: mcp.ie.conf
docs/: BD_SISTEMA_LOGISTICO_IE.md  IAM-IE-Guia-Integracion.md  Servicio-Correo-IE.md  Sistema-IAM-IE.md
docs-mcp-servers/config-vault/: Dockerfile  README.md  pyproject.toml  server-meta.json  server.py
docs-mcp-servers/docs-api/: Dockerfile  api.py
docs-mcp-servers/ie-docs/: Dockerfile  pyproject.toml  server-meta.json  server.py
mcp-ui/: Dockerfile  package-lock.json  package.json  tsconfig.json
mcp-ui/src/components/: EntropyWave.astro  Navbar.astro
mcp-ui/src/layouts/: BaseLayout.astro
mcp-ui/src/pages/: docs.astro  index.astro  info.astro
mcp-ui/src/styles/: global.css
